discord-frontend/hartex-discord-commands-test/tests/ui/only_structs.stderr
error: the `CommandMetadata` trait can only be derived on structs
  --> tests/ui/only_structs.rs:27:10
   |
27 | #[derive(CommandMetadata)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `CommandMetadata` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the `CommandMetadata` trait can only be derived on structs
  --> tests/ui/only_structs.rs:30:10
   |
30 | #[derive(CommandMetadata)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `CommandMetadata` (in Nightly builds, run with -Z macro-backtrace for more info)
